--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
 					text-decoration: none;
 					font-size: 14px;
 			}
-		
-			a:hover {
-				transition: 0.7s;
-				color: white;
-			}
+
 			body {
 					background-color:#131219;
 					font-family:monospace;
 			}
+
 			.page {
 					display: none;
 					position: relative;
@@ -35,7 +32,7 @@
 			}
 
 			.fading {
-					color: #f1b0d4;
+					color: #fcc7e4;
 					animation: fading 5s infinite
 					}
 
@@ -52,6 +49,7 @@
 						opacity: 0
 						}
 					}
+					
 			.button {
 					background-color: #131219;
 					border: 2px;
@@ -101,45 +99,49 @@
     </style>
 
     <body>
-		<audio id="player" src="audio/audio.mp3" autoplay=true loop=""></audio>
+		<audio id="player" src="audio/audio.mp3" autoplay="autoplay" loop=""></audio>
 		<div id="particles-js"></div>
 		<div id="container"></div>
-        <pre class="fading"> 
-		<br>
-		<br>     
-<a ihref="#" class="glow"><pre>                                                                                **                                              </pre></a>
-<a ihref="#" class="glow"><pre>                                                                                **                                              </pre></a>
-<a ihref="#" class="glow"><pre>                                                                                **                                              </pre></a>
-<a ihref="#" class="glow"><pre>                                                                                **                                              </pre></a>
-<a ihref="#" class="glow"><pre>                                                                                **                                              </pre></a>
-<a ihref="#" class="glow"><pre>                                                                                ** ***  ****   **   ****           ***  ****    </pre></a>
-<a ihref="#" class="glow"><pre>                                                                           *** **  **** **** * **    ***  *  ***   **** **** *  </pre></a>
-<a ihref="#" class="glow"><pre>                                                                          ********* **   ****  **     ****  * ***   **   ****   </pre></a>
-<a ihref="#" class="glow"><pre>                                                                         **   ****  **         **      **  *   ***  **          </pre></a>
-<a ihref="#" class="glow"><pre>                                                                         **   ****  **         **      **  *   ***  **          </pre></a>
-<a ihref="#" class="glow"><pre>                                                                         **    **   **         **      ** **    *** **          </pre></a>
-<a ihref="#" class="glow"><pre>                                                                         **    **   **         **      ** ********  **          </pre></a>
-<a ihref="#" class="glow"><pre>                                                                         **    **   **         **      ** *******   **          </pre></a>
-<a ihref="#" class="glow"><pre>                                                                         **    **   **         **      ** **        **          </pre></a>
-<a ihref="#" class="glow"><pre>                                                                          **    **   ***         ********* ****    * ***        </pre></a>
-<a ihref="#" class="glow"><pre>                                                                           *****      ***          **** *** *******   ***       </pre></a>
-<a ihref="#" class="glow"><pre>                                                                            ***                          *** *****              </pre></a>
-<a ihref="#" class="glow"><pre>                                                                                                 *****  ***                     </pre></a>
-<a ihref="#" class="glow"><pre>                                                                                                *     ****                      </pre></a>
-        <br>
-        <br>
-        </pre>         
-        <center>
-            <a class="glow">francis</a>
+        <pre class="fading">         
+			<br>
+			<br>         
+        		<center>
+					<a><pre>
+			**                                              
+			**                                              
+			**                                              
+			**                                              
+			**                                              
+			** ***  ****   **   ****           ***  ****    
+		   *** **  **** **** * **    ***  *  ***   **** **** *  
+		  ********* **   ****  **     ****  * ***   **   ****   
+		 **   ****  **         **      **  *   ***  **          
+		 **   ****  **         **      **  *   ***  **          
+		 **    **   **         **      ** **    *** **          
+		 **    **   **         **      ** ********  **          
+		 **    **   **         **      ** *******   **          
+		 **    **   **         **      ** **        **          
+		  **    **   ***         ********* ****    * ***        
+		   *****      ***          **** *** *******   ***       
+		    ***                         *** *****              
+					   *****  ***                     
+			  *     ****     
+					</pre></a>  
+				</center>
+		</pre>
+		<div>
+			<center>
+            <a class="glow">&hairsp;&hairsp;francis</a>
             <br>
             <br>
 			<br>
-            <a class="glow">marcus</a>
+            <a class="glow">&hairsp;&hairsp;marcus</a>
 			<br>
             <br>
 			<br>
-            <a class="glow">dwight</a>
-        </center>
+            <a class="glow">&hairsp;&hairsp;dwight</a>
+			</center>
+		</div>		
 		<script src="script.js"></script>
     </body>
 </html>
